# AutoSTPP

./: .gitignore  .gitlab-ci.yml  .gitmodules  Dockerfile  LICENSE  Makefile  README.md  conda-lock.yml  environment.yml  logging.conf  pyproject.toml  requirements.txt  setup.py  sphinx.mustache  test_environment.py  tmp
configs/: autoint3d.yaml  autoint_1d_sine.yaml  autoint_3d_positive.yaml  autoint_copula_stpp.yaml  autoint_speed_benchmark.yaml  autoint_stpp.yaml  autoint_stpp_gauss.yaml  deep_stpp.yaml  montecarlo_stpp.yaml  prodnet_cuboid_normal.yaml  prodnet_cuboid_sine.yaml  test_autoint_1d_dataset.yaml  test_autoint_1d_sine.yaml  test_autoint_3d_dataset.yaml  test_autoint_3d_positive.yaml  test_fixture.yaml  tune_prodnet_config.yaml
configs/lightning/: prodnet_cuboid_normal.yaml  prodnet_cuboid_sine.yaml
docs/: Makefile  conf.py  index.rst  make.bat
kube/: cuboid.yaml  interactive.yaml
notebooks/: Activation.ipynb  Alternating Hawkes.ipynb  AutoInt 3D.ipynb  AutoInt STPP with Same Influence.ipynb  Correcting Hawkes.ipynb  MLE Alternating Hawkes.ipynb  Synthetic.ipynb  Visualizer.ipynb
notebooks/notebooks/: 2. Deep-STPP Visualization.ipynb  4. Deep-Stpp Real World Experiments.ipynb  5. Fully-Stpp Real World Experiments.ipynb
src/: download_data.py  predict.py  tune.py  tune_cuboid.py  utils.py  zip_results.py
src/data/: adapter.py  data.py  make_dataset.py  synthetic.py  toy.py
src/data/lightning/: sliding_window.py  toy3d.py
src/demo/: AlternatingMLE.py  AutoInt.py  CorrectingMLE.py
src/experiment/: autoint3d.py  cli.py  run_cuboid.py  run_stpp.py
src/integration/: autoint.py  cheb.py  numint.py  taylor.py
src/models/: ctrnn.py  ctrnn_process.py  model.py  rmtpp.py  st_model.py  transformer.py
src/models/lightning/: autoint_copula_stpp.py  autoint_stpp.py  autoint_stpp_gauss.py  cuboid.py  deep_stpp.py  montecarlo_stpp.py  prodnet_cuboid.py  stpp.py
src/models/spatiotemporal/: deepstpp.py  model.py  numint.py  predict.py
src/tune/: tune_cuboid.py
src/visualization/: plotter.py  rose.py  visualize.py
test/: autoint_1d_sine.py  autoint_3d_positive.py  autoint_mlp.py  autoint_speed_benchmark.py  conftest.py  test_addmixseq.py  test_autoint_1d_dataset.py  test_autoint_1d_sine.py  test_autoint_3d_dataset.py  test_autoint_3d_positive.py  test_autoint_speed_benchmark.py  test_fixture.py  test_positivity.py  test_posmixsine.py  test_synthetic.py
