[tool.pytest.ini_options]
pythonpath = [
  "src"
]
testpaths = [
  "tests"
]

[tool.poetry]
name = "autoint"
version = "0.1.0"
description = "Automatic Integration for Neural Spatio-Temporal Point Process models (AI-STPP) is a new paradigm for exact, efï¬cient, non-parametric inference of point process. It is capable of learning complicated underlying intensity functions, like a damped sine wave."
authors = ["Zihao Zhou"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
click = "~=8.1.2"
Sphinx = "^5.3.0"
coverage = "^6.5.0"
flake8 = "^5.0.4"
python-dotenv = ">=0.5.1"
numpy = "~=1.21.1"
torch = "1.12.1"
tqdm = "~=4.62.3"
matplotlib = "~=3.5.1"
sklearn = "~=0.0"
scikit-learn = "~=1.0.2"
plotly = "~=5.7.0"
setuptools = "~=58.2.0"
rich = "~=12.5.1"
loguru = "~=0.6.0"
PyYAML = "~=5.4.1"
torchtyping = "~=0.1.4"
typeguard = "~=2.13.3"
pytest = "~=7.1.3"
pandas = "^1.5.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
