[tool.pytest.ini_options]
pythonpath = [
  "src"
]
testpaths = [
  "tests"
]

[tool.poetry]
name = "autoint-stpp"
version = "0.1.0"
description = "Automatic Integration for Neural Spatio-Temporal Point Process models (AI-STPP) is a new paradigm for exact, efï¬cient, non-parametric inference of point process. It is capable of learning complicated underlying intensity functions, like a damped sine wave."
authors = ["Zihao Zhou"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
click = "~=8.1.3"
Sphinx = "^5.3.0"
coverage = "^6.5.0"
flake8 = "^5.0.4"
python-dotenv = "^0.21.0"
numpy = "~=1.23.5"
tqdm = "~=4.62.3"
matplotlib = "~=3.6.2"
scikit-learn = "~=1.1.3"
plotly = "~=5.7.0"
rich = "~=12.5.1"
loguru = "~=0.6.0"
PyYAML = "~=5.4.1"
torchtyping = "~=0.1.4"
typeguard = "~=2.13.3"
pytest = "~=7.2.0"
pandas = "^1.5.2"
rose-colormap = "1.0.0"
wandb = "^0.13.7"
ffmpeg = "^1.4"
ipykernel = "^6.21.3"
kaleido = "0.2.1"
nbformat = "^5.7.3"
torch = "^1.13.1"
ipywidgets = "^8.0.4"
aim = "^3.16.2"
pytorch-lightning = "^2.0.0"
jsonargparse = {extras = ["signatures"], version = "^4.20.0"}
ray = {extras = ["tune"], version = "^2.3.1"}
mock = "^5.0.1"
protobuf = "3.20"
boto3 = "^1.26.101"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
